--- a/index.html
+++ b/index.html
@@ -4,51 +4,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <title>Sam Watson - Full Stack Web Developer</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="css/style.css">
+
+    <title>Samuel Watson</title>
 </head>
 
-<body>
+<body class="blue-grey darken-4">
+    <div class="container">
+        <div class="row">
 
-    <style>
-        :root {
-            --black: #222;
-            --white: #eee;
-        }
+            <div class="col">
+                <h1 class="white-text lighten-5"><span class="deep-orange-text accent-3">HELLO</span> <br>
+                    I'M <span class="deep-orange-text accent-3">SAM</span><br>
+                    I <span class="deep-orange-text accent-3">DEVELOP</span> WEBSITES</h1><br>
+            </div>
+        </div>
 
-        body {
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-            color: --var(black);
-            background-color: --var(white);
-            font-size: 10px;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-        }
+        <div class="row">
+            <div class="col">
+                <a href="https://github.com/SamuelWatson89">
+                    <i data-feather="github"></i>
+                </a>
+            </div>
 
-        main {
-            display: -ms-grid;
-            display: grid;
-            width: 100vw;
-            height: 100vh;
-            -ms-flex-line-pack: center;
-            align-content: center;
-            justify-items: center;
-        }
+            <div class="col">
+                <a href="www.linkedin.com/in/samuelwatson89">
+                    <i data-feather="linkedin"></i>
+                </a>
+            </div>
 
-        h1 {
-            font-size: 5rem;
-            text-shadow: 0.5px 0.5px 0.5px rgba(0, 0, 0, 0.5);
-        }
-    </style>
+            <div class="col">
+                <a href="https://www.instagram.com/samuelwatson89/">
+                    <i data-feather="instagram"></i>
+                </a>
+            </div>
+        </div>
+    </div>
 
-    <main>
-        <h1>SOON.</h1>
-        <P>Sam Watson</P>
-    </main>
-
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://unpkg.com/feather-icons"></script>
+    <script>
+        feather.replace({
+            class: 'deep-orange-text accent-3 icon',
+            width: '50',
+            height: '50',
+            'stroke-width': 1.5
+        })
+    </script>
 </body>
 
 </html>
