--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Samuel Watson</title>
+    <title>Samuel Watson - Frontend developer, who loves Django!</title>
 </head>
 
 <body class="blue-grey darken-4">
