--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
             </div>
 
             <div class="col">
-                <a href="www.linkedin.com/in/samuelwatson89">
+                <a href="https://linkedin.com/in/samuelwatson89">
                     <i data-feather="linkedin"></i>
                 </a>
             </div>
 
             <div class="col">
-                <a href="https://www.instagram.com/samuelwatson89/">
+                <a href="https://instagram.com/samuelwatson89/">
                     <i data-feather="instagram"></i>
                 </a>
             </div>
