--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Samuel Watson - Frontend developer, who loves Django!</title>
 </head>
 
-<body class="blue-grey darken-4">
+<body class="blue-grey darken-4 center-page">
     <div class="container">
         <div class="row">
 
