Reduced image size on mobile.

--- a/xmas.html
+++ b/xmas.html
@@ -22,7 +22,7 @@
         <div class="row">
             <div class="col s12">
                 <div v-for="gift in gifts" :key="gift.name" class=" row blue-grey lighten-5 z-depth-3 mt20 pb10 pt10">
-                    <div class="col s12 m3">
+                    <div class="col s8 m3 push-s2">
                         <img :src="'/img/' + gift.image" class="responsive-img">
                     </div>
 
