Links open in new tab

--- a/xmas.html
+++ b/xmas.html
@@ -37,7 +37,8 @@
                             {{gift.extraInfo}}
                         </p>
 
-                        <a :href="gift.link" class="waves-effect waves-light btn deep-orange accent-3">Shop at
+                        <a :href="gift.link" class="waves-effect waves-light btn deep-orange accent-3"
+                            target="_blank">Shop at
                             {{gift.linkText}}</a>
                     </div>
                 </div>
