Added new items

--- a/xmas.html
+++ b/xmas.html
@@ -58,12 +58,12 @@
                 gifts: [
                     {
                         image: 'mechanix_impact_coyote.jpg',
-                        name: 'MECHANIX WEAR M-PACT GLOVES COYOTE',
+                        name: 'MECHANIX WEAR M-PACT GLOVES',
                         price: '29.95',
                         category: 'Airsoft',
                         link: 'https://www.military1st.co.uk/mpt-72-mechanix-wear-m-pact-gloves-coyote.html',
                         linkText: 'Military 1st',
-                        extraInfo: 'Size: Large'
+                        extraInfo: 'Size: Large. Coyote or Black colour'
                     },
                     {
                         image: 'socks.jpg',
@@ -100,6 +100,24 @@
                         link: 'https://www.thewhiskyexchange.com/p/57590/filey-bay-flagship',
                         linkText: 'Whiskey Exchange',
                         extraInfo: 'I have not looked for a cheaper price.'
+                    },
+                    {
+                        image: 'novritsch_scope.jpg',
+                        name: 'Novritsch 1-4x Variable Scope',
+                        price: '67.50',
+                        category: 'Airsoft',
+                        link: 'https://eu.novritsch.com/product/1-4x-variable-scope/',
+                        linkText: 'Novritsch',
+                        extraInfo: 'Need to see who im missing, in more detail! A little cheaper to order form EU site.'
+                    },
+                    {
+                        image: 'extension_cables.jpg',
+                        name: 'Phanteks Extensions cable kit - orange',
+                        price: '22.99',
+                        category: 'PC Parts',
+                        link: 'https://www.overclockers.co.uk/phanteks-extension-cable-combo-kit-orange-cm-027-pt.html',
+                        linkText: 'Overclockers',
+                        extraInfo: 'Everyone PC runs better when its got some coloured cables... right.'
                     },
                 ]
             }
