--- a/xmas.html
+++ b/xmas.html
@@ -147,6 +147,15 @@
                         linkText: '',
                         extraInfo: 'Not seen any specific.. maybe some cotton trouser bottoms...? Why so expensive?!!?'
                     },
+                    {
+                        image: 'cyma_cm099_vss.jpg',
+                        name: 'CYMA CM.099 VSS ',
+                        price: '199.00',
+                        category: 'Airsfot',
+                        link: 'https://www.patrolbase.co.uk/cyma-cm-099-vss-vintorez-replica?pv=13900',
+                        linkText: 'Patrol Base',
+                        extraInfo: 'You never know 😄... Maybe some money towards, Myabe a dream.'
+                    },
                 ]
             }
         })
