Updated page with details

--- a/index.html
+++ b/index.html
@@ -11,14 +11,31 @@
     <title>Samuel Watson - Frontend developer, who loves Django!</title>
 </head>
 
-<body class="blue-grey darken-4 center-page">
+<body class="blue-grey darken-4">
     <div class="container">
-        <div class="row">
-
+        <div class="row mt60">
             <div class="col">
                 <h1 class="white-text lighten-5"><span class="deep-orange-text accent-3">HELLO</span> <br>
                     I'M <span class="deep-orange-text accent-3">SAM</span><br>
                     I <span class="deep-orange-text accent-3">DEVELOP</span> WEBSITES</h1><br>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col s12 l6 white-text">
+                <p>
+                    With over 2 years experience working in digital marketing, developing bespoke event
+                    management software, email communications and unique websites for independent and big brand
+                    companies.
+                    I work closely with project managers, sales and design teams, to achevie goals.
+                </p>
+
+                <p>
+                    I wanted to pursue a new career after spending 12 years in Retail Opticic, training with Specsavers
+                    Opticians to become a qualified Dispensing Optician. The job saw me progress to supervisory and in
+                    in-store trainer roles too. I always enjoyed design, and taught myself a little coding during my
+                    teens, so i decided to try my hand a this.
+                </p>
             </div>
         </div>
 
