--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </p>
 
                 <p>
-                    I wanted to pursue a new career after spending 12 years in Retail Opticic, training with Specsavers
+                    I wanted to pursue a new career after spending 12 years in Retail Optics, training with Specsavers
                     Opticians to become a qualified Dispensing Optician. The job saw me progress to supervisory and in
                     in-store trainer roles too. I always enjoyed design, and taught myself a little coding during my
                     teens, so i decided to try my hand a this.
