--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
 <body class="blue-grey darken-4">
     <div class="container">
         <div class="row mt60">
-            <div class="col">
-                <h1 class="white-text lighten-5"><span class="deep-orange-text accent-3">HELLO</span> <br>
-                    I'M <span class="deep-orange-text accent-3">SAM</span><br>
-                    I <span class="deep-orange-text accent-3">DEVELOP</span> WEBSITES</h1><br>
+            <div class="col relative">
+                <h1 class="white-text lighten-5 orange-bar">
+                    <span class="deep-orange-text accent-3">HELLO</span> I'M <span
+                        class="deep-orange-text accent-3">SAM</span><br>
+                    I DEVELOP WEBSITES
+                </h1>
             </div>
         </div>
 
         <div class="row">
-            <div class="col s12 l6 white-text">
+            <div class="col s12 xl8 white-text">
                 <p>
                     With over 2 years experience working in digital marketing, developing bespoke event
                     management software, email communications and unique websites for independent and big brand
