--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Samuel Watson - Frontend developer, who loves Django!</title>
+    <title>Samuel Watson - Frontend developer</title>
 </head>
 
 <body class="blue-grey darken-4">
@@ -26,17 +26,20 @@
         <div class="row">
             <div class="col s12 xl8 white-text">
                 <p>
-                    With over 2 years experience working in digital marketing, developing bespoke event
-                    management software, email communications and unique websites for independent and big brand
-                    companies.
-                    I work closely with project managers, sales and design teams, to achevie goals.
+                    With over 4 years experience, working in digital marketing and video games. Developing bespoke event
+                    management
+                    software, email communications and unique websites for independent and big brand companies, working
+                    closely with project
+                    managers and design teams. Having focused primarily on Wordpress in recent roles, I am exploring
+                    other stacks to create
+                    web software, including Node and Express with an aim to master Vue.
                 </p>
 
                 <p>
                     I wanted to pursue a new career after spending 12 years in Retail Optics, training with Specsavers
-                    Opticians to become a qualified Dispensing Optician. The job saw me progress to supervisory and in
-                    in-store trainer roles too. I always enjoyed design, and taught myself a little coding during my
-                    teens, so i decided to try my hand a this.
+                    Opticians to become a qualified Dispensing Optician. The job saw me progress to supervisory and
+                    trainer roles too. I always enjoyed design, and taught myself Photoshop and a little coding during
+                    my teenage years, so i decided to try my hand a this!
                 </p>
             </div>
         </div>
